--- a/DanceCalc/m4d/Views/Song/Create.cshtml
+++ b/DanceCalc/m4d/Views/Song/Create.cshtml
@@ -15,6 +15,10 @@
 </div>
 
 @section Scripts {
+    @{
+        string pageScript = "~/Scripts/edit.js" + Page.ScriptQualifier;
+    }
+
     @Scripts.Render("~/bundles/jqueryval")
     <script src="@Url.Content("~/Scripts/chosen.jquery.js")" type="text/javascript"></script>
     <link href="@Url.Content("~/Content/chosen.css")" rel="stylesheet" type="text/css" />
@@ -23,5 +27,5 @@
         var albumCount = @Model.Albums.Count-5;
         var albumsAdded = 0;
     </script>
-    <script src="@Url.Content("~/Scripts/edit.js?@Html.Raw(DateTime.Now.Ticks.ToString())")" type="text/javascript"></script>
+    <script src="@Url.Content(pageScript)" type="text/javascript"></script>
 }
