--- a/DanceCalc/m4d/Views/_ViewStart.cshtml
+++ b/DanceCalc/m4d/Views/_ViewStart.cshtml
@@ -1,3 +1,11 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
+    if (HttpContext.Current.IsDebuggingEnabled)
+    {
+        Page.ScriptQualifier = "";
+    }
+    else
+    {
+        Page.ScriptQualifier = "?" + Html.Raw(DateTime.Now.Ticks.ToString());
+    }
 }
