--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -29,6 +29,7 @@
         <li>@Html.ActionLink("Restore the Datbase", "RestoreDatabase")</li>
         <li>@Html.ActionLink("Seed the Datbase", "SeedDatabase")</li>
         <li>@Html.ActionLink("Rerun seed function", "Reseed")</li>
+        <li>@Html.ActionLink("Upload Catalog", "UploadCatalog")</li>
     }
 </ul>
 
@@ -42,17 +43,17 @@
         @Html.AntiForgeryToken();
         <input type="file" name="FileUpload" />
         <br />
-        <input type="submit" name="Reload Database" id="Submit" value="Upload" />
+        <input type="submit" name="UploadTempoes" id="Submit" value="Upload" />
     }
     <hr />
-
+    
     <h3>Reload the Database</h3>
     using (Html.BeginForm("ReloadDatabase", "Admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken();
         <input type="file" name="FileUpload" />
         <br />
-        <input type="submit" name="Reload Database" id="Submit" value="Upload" />
+        <input type="submit" name="ReloadDatabase" id="Submit" value="Upload" />
     }
 }
 
