--- a/DanceCalc/m4d/Views/Song/DetailsCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/DetailsCore.cshtml
@@ -15,9 +15,72 @@
             @Html.DisplayNameFor(model => model.Tempo):
         </div>
         <div class="display-field">
-            @decimal.Round(Model.Tempo.Value).ToString("F0")
+            @decimal.Round(Model.Tempo.Value).ToString("F0") BPS
         </div>
         <br />
+    }
+
+    @if (Model.Length != null)
+    {
+        DanceLibrary.SongDuration duration = new DanceLibrary.SongDuration((decimal)Model.Length);
+        string length = duration.ToString("M");
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Length):
+        </div>
+        <div class="display-field">
+            @length
+        </div>
+        <br />
+    }
+
+    @if (Model.DanceRatings != null)
+    {
+        string dl = null;
+        string separator = "";         
+        if (Model.DanceRatings.Count == 1)
+        {
+            dl = "Dance: ";
+        }
+        else
+        {
+            dl = "Dances: ";
+        }
+        <div class="display-label">
+            @dl
+        </div>
+        <div class="display-field">
+            @foreach (var item in Model.DanceRatings)
+            {
+                <text>@separator</text>
+                @Html.DisplayFor(model => item.Dance.Info.Name);
+                separator = ", ";
+            }
+        </div>
+    <br />
+    }
+    
+    @if (Model.HasAlbums)
+    {
+        if (Model.Albums.Count == 1)
+        {
+            <div class="display-label">
+                Album:
+            </div>
+            @Html.Partial("AlbumDetails", Model.Albums[0]);
+            <br/>
+        }
+        else
+        {
+            <div class="display-label">
+                Albums:
+            </div>
+            <ul>
+                @foreach (m4dModels.AlbumDetails album in Model.Albums )
+                {
+                    <li>@Html.Partial("AlbumDetails",album)</li>
+                }
+            </ul>
+        }
     }
 
     @if (Model.Genre != null)
@@ -31,90 +94,7 @@
         <br />
     }
 
-    @if (Model.Length != null)
-    {
-        <div class="display-label">
-            @Html.DisplayNameFor(model => model.Length):
-        </div>
-        <div class="display-field">
-            @Html.DisplayFor(model => model.Length)
-        </div>
-        <br />
-    }
-
-    <div class="display-label">
-        Dance(s):
-    </div>
-    <div class="display-field">
-        @{ string separator = ""; }
-        @if (Model.DanceRatings != null)
-        {
-            foreach (var item in Model.DanceRatings)
-            {
-                @separator;
-                @Html.DisplayFor(model => item.Dance.Info.Name);
-                separator = ", ";
-            }
-        }
-    </div>
-    <br />
-    @if (Model.HasAlbums)
-    {
-        for (int aidx = 0; aidx < Model.Albums.Count; aidx++)
-        {
-            m4dModels.AlbumDetails album = @Model.Albums[aidx];
-
-            string cls = (aidx == 0) ? "" : "display-label-alternate";
-            <div class="display-label @cls">
-                @if (aidx == 0)
-                {
-                    <text>Album:</text>
-                }
-                else
-                {
-                    <text>Alternate Album:</text>
-                }
-            </div>
-            <div class="display-field">
-                @album.Name
-            </div>
-            if (@album.Track != null)
-            {
-                <div class="display-label">
-                    Track:
-                </div>
-                <div class="display-field">
-                    @album.Track
-                </div>
-            }
-            if (@album.Publisher != null)
-            {
-                <div class="display-label">
-                    Publisher:
-                </div>
-                <div class="display-field">
-                    @album.Publisher
-                </div>
-            }
-            if (User.IsInRole("showDiagnostics") && album.HasPurchaseInfo)
-            {
-                <div class="display-label">
-                    Purchase:
-                </div>
-                // TODO: Purchase info should eventually map to links, this variation is just
-                //  for diagnostic purposes
-                IList<string> info = album.GetPurchaseInfo();
-                foreach (string p in info)
-                {
-                    <text>@p </text>
-                }
-            }
-
-            <br />
-        }
-    }
-
-    <div class="display-label">
+    @*<div class="display-label">
         @Html.DisplayNameFor(model => model.Created):
     </div>
     <div class="display-field">
@@ -129,7 +109,7 @@
         @Html.DisplayFor(model => model.Modified)
     </div>
     <br />
-    <br />
+    <br />*@
 
 </fieldset>
 
