Get details page tuned for small devices

--- a/DanceCalc/m4d/Content/Site.css
+++ b/DanceCalc/m4d/Content/Site.css
@@ -115,3 +115,11 @@ table.songlist
 }
 
 .row-buffer { margin-top:15px; }
+
+.btn-ml,
+.btn-group-ml > .btn {
+  padding: 9px 14px;
+  font-size: 16px;
+  line-height: 1.33;
+  border-radius: 6px;
+}
