--- a/DanceCalc/m4d/Views/Song/Details.cshtml
+++ b/DanceCalc/m4d/Views/Song/Details.cshtml
@@ -12,41 +12,30 @@
     </div>
 </div>
 
+@Html.Partial("DetailsCore")
 <div class="row">
-    <div id="songDetails" class="col-md-6">
-        @Html.Partial("DetailsCore")
-        <div>
-            @if (User.IsInRole("canEdit"))
-            {
-                @Html.ActionLink("Edit", "Edit", new { id = Model.SongId, filter = ViewBag.SongFilter }, new { @class = "btn btn-small btn-default", role = "button" })
-                @Html.ActionLink("Delete", "Delete", new { id = Model.SongId, filter = ViewBag.SongFilter }, new { @class = "btn btn-small btn-default", role = "button" })
-                @Html.ActionLink("XBox", "MusicServiceSearch", new { id = Model.SongId, type="X", filter = ViewBag.SongFilter }, new { @class = "btn btn-small btn-default", role = "button" })
-                @Html.ActionLink("ITunes", "MusicServiceSearch", new { id = Model.SongId, type = "I", filter = ViewBag.SongFilter }, new { @class = "btn btn-small btn-default", role = "button" })
-                @Html.ActionLink("Amazon", "MusicServiceSearch", new { id = Model.SongId, type = "A", filter = ViewBag.SongFilter }, new { @class = "btn btn-small btn-default", role = "button" })
-                @Html.ActionLink("Next XBox", "BatchMusicService", new { filter = ViewBag.SongFilter, type = "X", count = 1 }, new { @class = "btn btn-small btn-primary", role = "button" })
-                @Html.ActionLink("Next Itunes", "BatchMusicService", new { filter = ViewBag.SongFilter, type = "I", count = 1 }, new { @class = "btn btn-small btn-primary", role = "button" })
-                @Html.ActionLink("Next Amazon", "BatchMusicService", new { filter = ViewBag.SongFilter, type = "A", count = 1 }, new { @class = "btn btn-small btn-primary", role = "button" })
-            }
-            @Html.ActionLink("Back to List", (string)ViewBag.SongFilter.Action, new { filter = ViewBag.SongFilter }, new { @class = "btn btn-small btn-primary", role = "button" })
-        </div>
-    </div>
-    <hr />
-    <div>
-        @foreach (m4dModels.PurchaseLink link in Model.GetPurchaseLinks())
+    <div id="songDetails" class="col-md-12">
+        @if (User.IsInRole("canEdit"))
         {
-            string target = string.Empty;
-            if (link.Target != null)
-            {
-                target = "target='" + link.Target + "'";
-            }
-            <a href="@link.Link" @Html.Raw(target)><img src='@Url.Content("~/Content/" + @link.Charm)' alt='@link.AltText' /></a>
+            @Html.ActionLink("Edit", "Edit", new { id = Model.SongId, filter = ViewBag.SongFilter }, new { @class = "btn btn-small btn-default", role = "button" })
+            @Html.ActionLink("Delete", "Delete", new { id = Model.SongId, filter = ViewBag.SongFilter }, new { @class = "btn btn-small btn-default", role = "button" })
+            @Html.ActionLink("XBox", "MusicServiceSearch", new { id = Model.SongId, type = "X", filter = ViewBag.SongFilter }, new { @class = "btn btn-small btn-default", role = "button" })
+            @Html.ActionLink("ITunes", "MusicServiceSearch", new { id = Model.SongId, type = "I", filter = ViewBag.SongFilter }, new { @class = "btn btn-small btn-default", role = "button" })
+            @Html.ActionLink("Amazon", "MusicServiceSearch", new { id = Model.SongId, type = "A", filter = ViewBag.SongFilter }, new { @class = "btn btn-small btn-default", role = "button" })
+            @Html.ActionLink("Next XBox", "BatchMusicService", new { filter = ViewBag.SongFilter, type = "X", count = 1 }, new { @class = "btn btn-small btn-primary", role = "button" })
+            @Html.ActionLink("Next Itunes", "BatchMusicService", new { filter = ViewBag.SongFilter, type = "I", count = 1 }, new { @class = "btn btn-small btn-primary", role = "button" })
+            @Html.ActionLink("Next Amazon", "BatchMusicService", new { filter = ViewBag.SongFilter, type = "A", count = 1 }, new { @class = "btn btn-small btn-primary", role = "button" })
         }
     </div>
-    @if (User.IsInRole("showDiagnostics"))
-    {
-        <div id="songLog" class="col-md-6">
+</div>
+
+@if (User.IsInRole("showDiagnostics"))
+{
+    <hr />
+    <div class="row">
+        <div id="songLog" class="col-md-12```">
             <br />
             @Html.Partial("SongItems", Model.Properties.OrderBy(sp => sp.Id))
         </div>
-    }
-</div>
+    </div>
+}
