Enable sorting by BPM + fix a label bug in the details page

--- a/DanceCalc/m4d/Views/Song/DetailsCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/DetailsCore.cshtml
@@ -45,7 +45,7 @@
                 @Html.DisplayNameFor(model => model.Tempo):
             </div>
             <div class="display-field">
-                @decimal.Round(Model.Tempo.Value).ToString("F0") BPS
+                @decimal.Round(Model.Tempo.Value).ToString("F0") BPM
             </div>
             <br />
         }
