Handle "Other" dances more systematically + give the admin the ability to manually clear the song count cache.

--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -17,6 +17,7 @@
     <li>@Html.ActionLink("Merge Candidates - Similar Title + All else equal", "MergeCandidates", "Song", new { level = 0 }, null)</li>
     <li>@Html.ActionLink("Clean up Tempoes", "CleanTempoes")</li>
     <li>@Html.ActionLink("Fix up Artists", "FixArtists")</li>
+    <li>@Html.ActionLink("Clear Song Cache", "ClearSongCache")</li>
 </ul>
 
 <h3>Tracing (Current Level = @ViewBag.TraceLevel)</h3>
